# python-template-service

./: .gitignore  README.md
app/: .gitignore  pyproject.toml
app/migrations/: .env.sample  20260705093442_create_template_tables.sql
app/template_service/: .env.sample  config.py  main.py
app/template_service/contracts/: common.py  pagination.py  template.py
app/template_service/features/templates/: template_mapper.py
app/template_service/features/templates/domain/: template_models.py  template_service.py
app/template_service/features/templates/persistence/: template_entities.py  template_reader.py  template_writer.py
app/template_service/infrastructure/: logging.py
app/template_service/infrastructure/postgres/: connection_factory.py  persistence_controller.py  persistence_controller_factory.py
app/template_service/openapi/: open_api_tags.py  responses.py
app/template_service/routes/: __init__.py  template.py
app/tests/builders/: template_builders.py
app/tests/unit_tests/mapping/: template_mapper_tests.py
