[project]
name = "template-service"
version = "0.1.0"
description = "Template Service API"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]",
    "scalar-fastapi",
    "sqlalchemy[asyncio]",
    "asyncpg",
    "python-dotenv"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["template_service"]
