[project]
name = "template-service"
version = "0.1.0"
description = "Template Service API"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]",
    "scalar-fastapi",
    "sqlalchemy[asyncio]",
    "asyncpg"
]

[project.optional-dependencies]
test = [
    "pytest",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["*_tests.py", "*_feature.py"]
python_classes = ["*Tests", "*Feature"]
python_functions = ["test_*"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["template_service"]